--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -1,6 +1,7 @@
 * {
     font-family: "Segoe UI", Arial, sans-serif;
     user-select: none;
+    outline: none;
 }
 
 @media (prefers-color-scheme: light) {
