[add] empty folder sign

--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -245,6 +245,17 @@ main .contents-panel::-webkit-scrollbar {
     display: none;
 }
 
+main .contents-panel .folder-empty {
+    font-size: 2em;
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 155px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
 main .contents-panel .contents-wrapper {
     display: flex;
     flex-direction: row;
