--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -184,20 +184,28 @@ main .path-bar .path-wrapper {
     flex-direction: row;
     width: calc(100% - 115px - 175px);
     margin-left: 7px;
+    overflow-y: hidden;
+    border-radius: 5px;
+}
+main .path-bar .path-wrapper-overflow{
+    box-shadow: inset 25px 0px 15px -20px var(--hover-color);
+}
+
+main .path-bar .path-wrapper::-webkit-scrollbar {
+    display: none;
 }
 
 main .path-bar .path-wrapper .path-button {
-    padding: 7.5px;
-    padding-right: 7.5px;
-    padding-left: 7.5px;
+    display: inline-block;
+    white-space: nowrap;
+    padding: 7.5px 10px;
     border-radius: 10px;
     font-size: 0.9em;
-    padding-left: 10px;
-    padding-right: 10px;
     margin-left: 5px;
     margin-right: 5px;
+    max-height: 33px;
+    height: 33px;
 }
-
 
 main .path-bar .path-wrapper span {
     font-size: 0.9em;
